--- a/source/styles.css
+++ b/source/styles.css
@@ -54,7 +54,7 @@ h1 {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 20%;
+    height: 16.3%;
 }
 
 button:hover {
@@ -62,22 +62,15 @@ button:hover {
     color: white;
 }
 
-.digitButton {
+.digitButton, .funcButton {
     width:30%;
-    height: 50%;
+    height: 60%;
     border-radius: 10px;
     font-size: 18px;
 }
 
 .opButton {
     width: 20%;
-    height: 50%;
-    border-radius: 10px;
-    font-size: 18px;
-}
-
-.funcButton {
-    width:30%;
     height: 50%;
     border-radius: 10px;
     font-size: 18px;
